# coreloop

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: uncrater_tests.yml
coreloop/: calibrator.c  calibrator.h  calibrator_interface.h  calibrator_zoom.c  cdi_interface.h  commanding.c  core_loop.c  core_loop.h  core_loop_errors.h  fft.c  fft.h  fft_1024.c  flash_interface.c  flash_interface.h  gain.c  high_prec_avg.h  housekeeping.c  lusee_appIds.h  lusee_commands.h  sequencer.c  spectra_in.c  spectra_out.c  spectrometer_interface.h  utils.c  watchdogs.c  watchdogs.h
data/: commands.txt  commands_simple.txt
documentation/: CHANGELOG.md  coreloop.md  lusee_appIds.md  lusee_commands.md  toplevel_commands.md
include/: LuSEE_IO.h  LuSEE_SPI.h  cdi_interface.h  cdi_options.h  core_loop.h  core_loop_errors.h  global.h  lusee_appIds.h  lusee_commands.h  lusee_settings.h  main.h  spectrometer_interface.h
pycoreloop/: Makefile  __init__.py  core_loop.py  core_loop_errors.py  lusee_appIds.py  lusee_commands.py
scripts/: create_appid_include.py  create_cmd_include.py  gen_check_avg_spectrum.py  generate_commands.py  lusee_commands.py
src/: LuSEE_IO.c  LuSEE_SPI.c  calibrator_interface.c  cdi_interface.c  coding_test.c  coding_test_arr.c  core_loop.c  global.c  interface_utils.c  interface_utils.h  main.c  spectrometer_interface.c
